--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "kdb-tree",
   "version": "1.0.0",
-  "description": "",
+  "description": "in-memory kdb tree",
   "main": "index.js",
   "directories": {
+    "example": "example",
     "test": "test"
   },
   "dependencies": {
@@ -15,7 +16,21 @@
   "scripts": {
     "test": "tape test/*.js"
   },
-  "keywords": [],
+  "keywords": [
+    "kdb",
+    "tree",
+    "spatial index",
+    "data structure",
+    "kd"
+  ],
   "author": "substack",
-  "license": "BSD"
+  "license": "BSD",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/peermaps/kdb-tree.git"
+  },
+  "bugs": {
+    "url": "https://github.com/peermaps/kdb-tree/issues"
+  },
+  "homepage": "https://github.com/peermaps/kdb-tree#readme"
 }
